--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,15 @@
 @import "@fortawesome/fontawesome-free/css/all.min.css";
 @import "./partials/_variables.scss";
 @import "bootstrap/scss/bootstrap.scss";
+
+
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow: auto !important;
+}
+
+#app{
+    display:contents;
+}
